# ImgConverterDesktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/docs/research/: template-features-analysis.md
.github/: git-pr-release.erb
.github/workflows/: build-flet-app.yml  create-release-branch.yaml  create-tag-and-release.yaml  release-build.yml
flutter/: pubspec_overrides.yaml
src/: dir_control.py  main.py  utils.py
tests/: test_convert.py  test_format_compat.py  test_utils.py
