[project]
name = "imgconverterdesktop"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yuulis" }
]
dependencies = [
  "flet[all]==0.82.2",
  "Pillow>=10.0.0",
  "pillow-heif>=0.16.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "imgconverterdesktop"

# company name to display in about app dialogs
company = "Yuulis"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by Yuulis"

[tool.flet.app]
path = "src"

# connectivity_plus 7.1.1 uses NWPath.isUltraConstrained (macOS 26.0+ only),
# which fails to compile with Xcode 16.4 / macOS 15.5 SDK.
# Flet does NOT read flutter/pubspec_overrides.yaml — this is the only hook.
[tool.flet.flutter.pubspec.dependency_overrides]
connectivity_plus = "7.0.0"

[dependency-groups]
dev = [
  "flet[all]==0.82.2",
  "pytest>=9.0.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.82.2"}
